feat(chat): 实现普通聊天无缝升级为面试功能
- 前端加载历史会话时同步更新当前 Session ID，确保 start_interview 携带正确 ID
- 后端优先复用普通聊天 Session 升级为面试，避免创建重复会话记录
- 面试结束后合并原聊天消息和面试过程消息，完整保留会话历史
- WebSocket 重连时可通过 session_started 消息恢复正确的会话状态
- 添加本地降级机制，当模型服务不可用时生成基础复习计划
- 优化代码结构和注释，提升系统稳定性和可维护性